--- a/public/css/loginregister.css
+++ b/public/css/loginregister.css
@@ -10,9 +10,12 @@ body {
   max-width: 900px;
   margin: 0 auto;
   padding: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 .form-container {
+  max-width: 450px;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
