--- a/views/cart/wishList.ejs
+++ b/views/cart/wishList.ejs
@@ -87,7 +87,7 @@
         </div>
         <div class="product-details">
             <h1 class="name"><%= item.name %></h1>
-            <p>$<%= item.price.toFixed(2) %></p>
+            <p>₹<%= item.price.toFixed(2) %></p>
         </div>
       </div>
         <div class="button-container">
