--- a/views/userSide/checkout.ejs
+++ b/views/userSide/checkout.ejs
@@ -109,7 +109,7 @@
                 <img src="/uploads/<%= checkoutItem.product.photos[0].filename %>" width="100" height="100" alt="Product Image">
                 <div class="price-quantity">
                     <h4><%= checkoutItem.product.name %></h4>
-                    <p id="product-price" data-product-price="<%= checkoutItem.product.price %>">Price: $<%= checkoutItem.product.price.toFixed(2) %></p>
+                    <p id="product-price" data-product-price="<%= checkoutItem.product.price %>">Price: ₹<%= checkoutItem.product.price.toFixed(2) %></p>
                     <div class="quantity-control">
                       <button class="quantity-btn">-</button>
                         <input type="number" class="form-control quantity-input" id="quantity" value="" data-stock="<%= checkoutItem.product.stock %>" data-qauntity="<%= checkoutItem.quantity ? checkoutItem.quantity : quantity %>">
@@ -287,9 +287,9 @@
         const discountAmount = totalCost * couponDiscount;
         const discountedTotal = totalCost - discountAmount;
 
-        orderTotalPriceElement.textContent = `Total Cost: $${discountedTotal.toFixed(2)}`;
+        orderTotalPriceElement.textContent = `Total Cost: ₹${discountedTotal.toFixed(2)}`;
         totalQuantityElement.textContent = `Total Items: ${totalQuantity}`;
-        couponDiscountPriceElement.textContent = `Discount: $${discountAmount.toFixed(2)}`;
+        couponDiscountPriceElement.textContent = `Discount: ₹${discountAmount.toFixed(2)}`;
     }
 
     productCards.forEach((card, index) => {
