--- a/views/orders/orderHistory.ejs
+++ b/views/orders/orderHistory.ejs
@@ -132,7 +132,7 @@
                       <% order.items.forEach(item => { %>
                       <div class="row">
                         <div class="col-md-2">
-                          <img src="/uploads/<%= item.image %>" class="img-fluid" alt="Product Image" />
+                          <img src="/uploads/<%= item.productId.photos[0].filename %>" class="img-fluid" alt="Product Image" />
                         </div>
                         <div
                           class="col-md-2 text-center d-flex justify-content-center align-items-center">
