wishlist/orderhistory updates

--- a/views/orders/orderHistory.ejs
+++ b/views/orders/orderHistory.ejs
@@ -127,7 +127,7 @@
                       <p >Total : ₹<%= order.totalCost %></p>
                     </div>
                     <div class="" >
-                      <p><a href="/order-details" style="text-decoration: none;">view  details</a></p>
+                      <p><a href="/order-details/<%= order._id %>" style="text-decoration: none;">view  details</a></p>
                     </div>
                   </div>
                   <div class="card shadow-0 border mb-4">
