--- a/public/css/wishList.css
+++ b/public/css/wishList.css
@@ -194,7 +194,7 @@ header {
   
  
 
- .wishlist{
+ /* .wishlist{
   width: 100%;
     display: flex;
     background-color: #ccc;
@@ -231,7 +231,69 @@ header {
     aspect-ratio: 3/2;
     object-fit: contain;
  }
-  
+   */
+
+   /* wishList.css */
+
+.wishlist {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.product-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.image-container {
+  margin-right: 20px;
+}
+
+.image-container img {
+  max-width: 150px;
+  height: auto;
+}
+
+.product-details {
+  flex-grow: 1;
+}
+
+.product-details h1 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.button-container {
+  margin-left: 20px;
+}
+
+.button-container button {
+  margin-right: 10px;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+
+.button-container button:last-child {
+  background-color: #4e4c4c;
+  color: white;
+}
+
+.button-container button:last-child:hover {
+  background-color: #0e0e0e;
+}
 
  
  
