--- a/views/cart/wishList.ejs
+++ b/views/cart/wishList.ejs
@@ -91,7 +91,7 @@
         </div>
       </div>
         <div class="button-container">
-            <form action="/add-to-cart" method="POST" style="display: inline;">
+            <form action="/move-to-cart/<%= item._id %>" method="POST" style="display: inline;">
                 <input type="hidden" name="productId" value="<%= item._id %>">
                 <button type="submit">ADD TO CART</button>
             </form>
@@ -143,6 +143,7 @@
         </div>
     </div>
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
     (function () {
         window.onpageshow = function (event) {
@@ -152,30 +153,28 @@
         };
     })();
 
-document.querySelectorAll('.add-to-cart-button').forEach(button => {
-    button.addEventListener('click', async (event) => {
-        const form = event.target.closest('form');
-        const formData = new FormData(form);
+// document.querySelectorAll('.add-to-cart-button').forEach(button => {
+//     button.addEventListener('click', async (event) => {
+//         const form = event.target.closest('form');
+//         const formData = new FormData(form);
 
-        try {
-            const response = await fetch('/add-to-cart', {
-                method: 'POST',
-                body: formData
-            });
-
-            const result = await response.json();
-
-            if (response.ok) {
-                alert(result.message);
-            } else {
-                alert('Failed to add to cart: ' + result.error);
-            }
-        } catch (error) {
-            console.error('Error adding to cart:', error);
-            alert('An error occurred while adding to cart.');
-        }
-    });
-});
+//            fetch('/move-to-cart', {
+//                 method: 'POST',
+//                 headers: {
+//                     'Content-Type': 'application/json'
+//                 },
+//                 body: formData
+//             })
+//             .then(response => response.json())
+//             .then(data => {
+//               if (data.success) {
+//                 Swal.fire('Success!', data.message, 'success');
+//               } else {
+//                 console.error('Error adding product to cart:', data.error);
+//               }
+//             })
+//     });
+// });
 
 </script>
 <script>
