--- a/views/orders/orderDetails.ejs
+++ b/views/orders/orderDetails.ejs
@@ -106,43 +106,131 @@
         </div>
         <% } %>
       </aside>
-      <section class="">
-        <% if (orders) { %>
-            <% orders.forEach(order => { %>         
-        <div class="card">
-            <div class="card-header">
-              Order ID: <%= order._id %>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Order Details</h5>
-              <% order.items.forEach(item => { %>
-              <div class="row mb-3">
-                <div class="col-md-3">
-                  <img src="/uploads/<%= item.image %>" class="img-fluid" alt="Product Image" />
-                </div>
-                <div class="col-md-9">
-                  <h6><%= item.name %></h6>
-                  <p>Quantity: <%= item.quantity %></p>
-                  <p>Price: ₹<%= item.price %></p>
+      <div class="container-fluid">
+        <% if (order) { %>
+        <div class="container">
+          <div class="d-flex justify-content-between align-items-center py-3">
+            <h2 class="h5 mb-0"><a href="#" class="text-muted"></a> Order <%= order._id %></h2>
+          </div>
+          <div class="row">
+            <div class="col-lg-8">
+              <div class="card mb-4">
+                <div class="card-body">
+                  <div class="mb-3 d-flex justify-content-between">
+                    <div>
+                      <span class="me-3"><%= new Date(order.createdAt).toDateString() %></span>
+                      <span class="me-3"><%= order._id %></span>
+                      <!-- <span class="me-3">Visa -1234</span> -->
+                    </div>
+                    <div class="d-flex">
+                      <button class="btn btn-link p-0 me-3 d-none d-lg-block btn-icon-text"><i class="bi bi-download"></i> <span class="text">Invoice</span></button>
+                      <div class="dropdown">
+                        <button class="btn btn-link p-0 text-muted" type="button" data-bs-toggle="dropdown">
+                          <i class="bi bi-three-dots-vertical"></i>
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                          <li><a class="dropdown-item" href="#"><i class="bi bi-pencil"></i> Edit</a></li>
+                          <li><a class="dropdown-item" href="#"><i class="bi bi-printer"></i> Print</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <table class="table table-borderless">
+                    <tbody>
+                      <% order.items.forEach(item => { %>
+                      <tr>
+                        <td>
+                          <div class="d-flex mb-2">
+                            <div class="flex-shrink-0">
+                              <img src="/uploads/<%= item.productId.photos[0].filename %>" alt="" width="35" class="img-fluid">
+                            </div>
+                            <div class="flex-lg-grow-1 ms-3">
+                              <h6 class="small mb-0"><a href="#" class="text-reset"><%= item.productId.name %></a></h6>
+                              <!-- <span class="small">Color: White</span> -->
+                            </div>
+                          </div>
+                        </td>
+                        <td><%= item.quantity %></td>
+                        <td class="text-end">₹<%= item.productId.price %></td>
+                        <td><span class="badge rounded-pill bg-info"><%= item.status %></span></td>
+                      </tr>
+                      <% }) %>
+                    </tbody>
+                    <tfoot>
+                      <tr>
+                        <td colspan="2">Discount(code: <%= order.couponCode %>)</td>
+                        <td class="text-danger text-end">-₹<%= order.priceDetails.discountAmount %></td>
+                      </tr>
+                      <tr>
+                        <td colspan="2">Subtotal</td>
+                        <td class="text-end">₹<%= order.priceDetails.subTotal %></td>
+                      </tr>
+                      <tr>
+                        <td colspan="2">Delivery charge</td>
+                        <td class="text-end">₹<%= order.priceDetails.deliveryCharge %></td>
+                      </tr>
+                      <tr>
+                        <td colspan="2">Sales Tax</td>
+                        <td class="text-end"><%= order.priceDetails.salesTax %></td>
+                      </tr>
+                      <tr class="fw-bold">
+                        <td colspan="2">TOTAL</td>
+                        <td class="text-end">₹<%= order.totalCost %></td>
+                      </tr>
+                    </tfoot>
+                  </table>
                 </div>
               </div>
-              <% }) %>
-              <div class="row">
-                <div class="col-md-6">
-                  <p>Total Amount: ₹<%= order.totalCost %></p>
+              <!-- Payment -->
+              <div class="card mb-4">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-lg-6">
+                      <h3 class="h6">Payment Method</h3>
+                      <p><%= order.paymentMethod %><br>
+                      Total: ₹<%= order.totalCost %> 
+                      <% if (order.paymentMethod === "online") { %>
+                        <span class="badge bg-success rounded-pill">PAID</span></p>
+                      <% } else { %>
+                        <span class="badge bg-success rounded-pill">PENDING</span></p>
+                      <% } %>
+                    </div>
+                    <div class="col-lg-6">
+                      <h3 class="h6">Billing address</h3>
+                      <address>
+                        <strong><%= order.deliveryAddress.address.name %></strong><br>
+                        <%= order.deliveryAddress.address.houseName %><br>
+                        <%= order.deliveryAddress.address.street %>,<%= order.deliveryAddress.address.city %><br>
+                        <%= order.deliveryAddress.address.district %><br>
+                        <%= order.deliveryAddress.address.state %>-<%= order.deliveryAddress.address.pinCode %><br>
+                        <!-- <abbr title="Phone">P:</abbr> (123) 456-7890 -->
+                      </address>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-md-6">
-                  <% if (order.couponApplied) { %>
-                  <p>Coupon Applied: <%= order.couponCode %></p>
-                  <p>Discounted Amount: ₹<%= order.discountedAmount %></p>
-                  <% } %>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card mb-4">
+                <!-- Shipping information -->
+                <div class="card-body">
+                  <h3 class="h6">Shipping Information</h3> <hr>
+                  <h3 class="h6">Address</h3>
+                  <address>
+                    <strong><%= order.deliveryAddress.address.name %></strong><br>
+                    <%= order.deliveryAddress.address.houseName %><br>
+                    <%= order.deliveryAddress.address.street %>,<%= order.deliveryAddress.address.city %><br>
+                    <%= order.deliveryAddress.address.district %><br>
+                    <%= order.deliveryAddress.address.state %>-<%= order.deliveryAddress.address.pinCode %><br>
+                    <!-- <abbr title="Phone">P:</abbr> (123) 456-7890 -->
+                  </address>
                 </div>
               </div>
             </div>
           </div>
-          <% }) %>
-          <% } %>
-      </section>
+        </div>
+        <% } %>
+     </div>
     </main>
 
     <footer class="footer">
