--- a/views/admin/couponList.ejs
+++ b/views/admin/couponList.ejs
@@ -111,7 +111,7 @@
               <% } %>
               <td>
                 <a href="#" class="btn btn-warning edit-coupon">EDIT</a>
-                <a href="#" class="btn btn-danger">REMOVE</a>
+                <a href="/admin/removecoupon/<%= coupon._id %>" class="btn btn-danger">REMOVE</a>
               </td>
             </tr>
             <% }) %>
